# ManimTSG

./: .gitignore  README.md  pyproject.toml
src/ManimTSG/: TexStringGroup.py  __init__.py  util.py
src/ManimTSG/Algebra/: __init__.py
src/ManimTSG/Common/: __init__.py
src/ManimTSG/LinearAlgebra/: __init__.py
src/ManimTSG/Probability/: __init__.py
test/: main.py
