[project]
name = "ManimTSG"
dynamic = ["version"]
description = "Manim 'Tex String Groups' for hierarchical TeX / LaTeX"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "manim"
]

[project.urls]
Homepage = "https://github.com/jb2170/ManimTSG/"

[tool.setuptools.dynamic]
version = {attr = "ManimTSG.__version__"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
